--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "quiz-camera",
   "version": "1.0.0",
+  "description": "Quiz camera app",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1",
-    "cors": "^2.8.5"
+    "multer": "^1.4.5-lts.1"
   }
 }
