--- a/package.json
+++ b/package.json
@@ -1,13 +1,26 @@
 {
-  "name": "quiz-camera",
+  "name": "quiz-camera-ai",
   "version": "1.0.0",
-  "description": "Quiz camera app",
+  "description": "Quiz Camera AI app that captures photo on quiz option selection.",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1"
-  }
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "keywords": [
+    "quiz",
+    "camera",
+    "photo",
+    "AI"
+  ],
+  "author": "Yuvraj",
+  "license": "MIT"
 }
