--- a/package.json
+++ b/package.json
@@ -1,25 +1,13 @@
 {
   "name": "quiz-camera-ai",
   "version": "1.0.0",
-  "description": "Quiz Camera AI app that captures photo on quiz option selection.",
+  "description": "AI quiz camera photo capture server",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "keywords": [
-    "quiz",
-    "camera",
-    "photo",
-    "AI"
-  ],
-  "author": "Yuvraj",
-  "license": "MIT"
+  }
 }
