--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "quiz-camera-ai",
   "version": "1.0.0",
-  "description": "AI quiz camera photo capture server",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "type": "module",
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2"
   }
 }
