--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "quiz-camera-ai",
   "version": "1.0.0",
+  "description": "Quiz camera AI app with Cloudinary photo upload",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -8,6 +9,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "multer": "1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "cloudinary": "^1.41.3",
+    "dotenv": "^16.3.1"
   }
 }
